# eyrc_cosmo_logistic

./: README.md  docking_server.py  movit.py  nav_cmd.py  opencv.py
arm_picky/: CMakeLists.txt  package.xml
arm_picky/srv/: ArmNew.srv
ebot_description/: CMakeLists.txt
ebot_description/launch/: ebot_gazebo_launch.py  start_world_launch.py  start_world_launch_4.py
ebot_docking/scripts/: ebot_docking_boilerplate.py  ebot_docking_boilerplate_hardware.py  ebot_docking_boilerplate_sim_test.py
ebot_nav2/: CMakeLists.txt  package.xml
ebot_nav2/config/: config.yaml  config_sim.yaml  newekf.yaml
ebot_nav2/launch/: action_launch.py  ebot_bringup_launch.py
ebot_nav2/maps/: map.data  map.pgm  map.yaml  map_old.yaml
ebot_nav2/params/: nav2_params.yaml
ebot_nav2/rviz/: nav2_default_view.rviz
ebot_nav2/scripts/: bot_odom.py  check.py  ebot_nav_cmd.py  ebot_nav_cmd_final.py  ebot_nav_cmd_hardware.py  new.py
eyantra_warehouse/worlds/: new.world  (+2 more)
my_bag/: metadata.yaml  my_bag_0.db3
pymoveit2/: CMakeLists.txt
pymoveit2/examples/: ex_collision_object.py  ex_joint_goal.py  ex_pose_goal.py  ex_servo.py  new_hard.py  something.py  task1b.py  task3b.py  task4_without_scene.py  task4b.py  task4b_new.py  task5_movit_hardware.py  task5_movit_sim.py
pymoveit2/examples/assets/: arm_base_20.stl  arm_base_40.stl  base.scene  rack1.stl  rack_scene.scene
pymoveit2/pymoveit2/: moveit2.py
try/: ebot_docking_boilerplate.py  ebot_nav_cmd.py  metadata.yaml  my_bag_0.db3
ur5_moveit/: .setup_assistant  CMakeLists.txt  package.xml
ur_description/: CMakeLists.txt
(+28 files in other folders)
